# rust-todo

./: .gitignore  Cargo.toml
src/: auth.rs  errors.rs  main.rs  users.rs
src/todos/: handlers.rs  model.rs
templates/: common.js  error.html  input.css  signup.html  todo.css  todo.js  todos.html
