[package]
name = "example-readme"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1" }
rinja_axum = "0.3.5"
# rinja = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = {version = "2.0.12"}
displaydoc = {version = "0.2"}
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
